--- a/app/pages/new/new.css
+++ b/app/pages/new/new.css
@@ -4,6 +4,7 @@
     justify-content: center;
     padding-top: 4rem;
     padding-bottom: 1rem;
+    width: 100%;
 }
 
 .content {
@@ -30,5 +31,5 @@
 }
 
 .qr-code-scanner {
-    width: 300px;
+    width: 100%;
 }
