--- a/app/pages/new/new.css
+++ b/app/pages/new/new.css
@@ -13,6 +13,8 @@
     align-items: center;
     gap: 4rem;
     min-height: 0;
+    width: 100%;
+    padding: 2rem;
 }
 
 .title {
@@ -20,6 +22,7 @@
     font-weight: 700;
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    color: #1976D2;
 }
 
 .header {
@@ -28,6 +31,7 @@
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
     width: 180px;
+    color: #1976D2;
 }
 
 .qr-code-scanner {
